[package]
name = "ploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="*"
thin-vec="*"
thiserror="*"
anyhow="*"
clap = { version = "*", features = ["derive", "color"] }
env_logger="*"
lazy_static = "*"
regex="*"
logos="*"
toml="*"
unraveler  = {path = "crates/unraveler"}
symbols  = {path = "crates/symbols"}
steadfast  = {path = "local_crates/steadfast"}
ego-tree="*"
itertools="*"
num-traits = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"

pretty_assertions="*"
